# TransFTrain

./: .gitignore  5_automatic_differentiation_implementation.ipynb  CMakeLists.txt  Makefile  README.md  main.ipynb  test.py
apps/: simple_ml.py
data/ptb/: train.txt
hw/hw0/src/: simple_ml.py  simple_ml_ext.cpp
hw/hw1/: hw1.ipynb
hw/hw2/: hw2.ipynb
hw/hw3/python/needle/: autograd.py
hw/hw3/tests/: test_ndarray.py
hw/hw4/: hw4.ipynb
hw/hw4/tests/: test_conv.py  test_nd_backend.py  test_sequence_models.py
lecture/lecture4/: 5_automatic_differentiation_implementation.ipynb
lecture/lecture4/python/needle/: autograd.py
python/: CMakeLists.txt  setup.py
python/TransFTrain/: __init__.py  autograd.py  backend_numpy.py  backend_selection.py  data.py  init.py  nn.py  ops.py  optim.py
python/TransFTrain/backend_ndarray/: ndarray.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu  simple_ml.py
test/: test_op.py
test/op/: test_addscalar.py  test_ewiseadd.py  test_log.py  test_matmul.py  test_relu.py  test_summation.py  test_transpose.py
tests/: test_nn_and_optim.py  test_simple_ml.py
tests/autograd/: test_autograd.py
tests/backbend/operations/: test_array_reshape.py
tests/data/: test_Transformations_RandomCrop.py  test_Transformations_RandomFlipHorizontal.py  test_cifar_ptb_data.py  test_dataloader.py  test_dataset.py
tests/init/: test_init.py
tests/model/: models.py  simple_training.py  test_resnet9_and_cifar10.py  test_sequence_models.py  test_test.py
tests/ndarray/: test_array_reshape.py  test_broadcast_to.py  test_ewiseadd.py  test_ewisediv.py  test_ewiseeq.py  test_ewiseexp.py  test_ewisege.py  test_ewiselog.py  test_ewisemaximum.py  test_ewisemul.py  test_ewisesub.py  test_ewisetanh.py  test_flip.py  test_getitem.py  test_logsumexp.py  test_matmul.py  test_pad.py  test_permute.py  test_reduce_max.py  test_reduce_sum.py  test_relu.py  test_reshape.py  test_saclareq.py  test_scalardiv.py  test_scalareq.py  test_scalarge.py  test_scalarmaximum.py  test_scalarmul.py  test_scalarpower.py  test_scalarsub.py  test_setitem.py  test_stack.py  test_sum.py  test_summation.py  test_tanh.py  test_transpose.py
tests/net/: mlp_resnet.py  test_net_MLPResNet.py  test_net_ResidualBlock.py  test_net_TrainMnist.py  test_nn_Epoch.py
tests/nn/: test_nn.py  test_nn_BatchNorm1d.py  test_nn_Conv.py  test_nn_Dropout.py  test_nn_Flatten.py  test_nn_LayerNorm1d.py  test_nn_Linear.py  test_nn_Relu.py  test_nn_Residual.py  test_nn_Sequential.py  test_nn_Softmax_loss.py
tests/op/: test_broadcast_to.py  test_ewiseadd.py  test_ewisediv.py  test_ewisemul.py  test_exp.py  test_logsoftmax.py  test_logsumexp.py  test_powerscalar.py  test_reshape.py
tests/ops/: test_conv.py  test_dilate.py  test_divsaclar.py  test_mulscalar.py  test_negate.py  test_powerscalar.py  test_summation.py
tests/optim/: test_optim_Adam.py  test_optim_SGD.py
tests/other/: test_numpy_generate_matrices.py
